/*
 * Copyright 2024 Accenture Global Solutions Limited
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package tracdap.api;

option java_package = "org.finos.tracdap.api";
option java_multiple_files = true;


/**
 * Detailed error information, available if an API call fails for any reason
 */
message TracErrorDetails {

  int32 code = 1;
  string message = 2;

  repeated TracErrorItem items = 3;
}

/**
 * Individual error items in a detailed error response
 *
 * @see TracErrorDetails
 */
message TracErrorItem {

  string detail = 1;
  string fieldPath = 2;
}
